staging/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: kong-ingress
  namespace: kong
spec:
  rules:
    - host: ssi-test.teda.th
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: kong-kong-proxy
                port:
                  number: 80
    - host: ssi-test-konga.teda.th
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service:
                name: konga
                port:
                  number: 80
